tests/test_files_pa3/SemanticErrors/UndefineType1.ic
class A {

	void sfunc() {
		A b = new B();
	}
	
}